objects/Top10PartnersOppTotal__c.object
<CustomObject>
    <fields>
        <fullName>Partner__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Contracts__c</fullName>
        <label>Potential_Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunities__c</fullName>
        <label>Total_Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Used with the '2.0b Top 10 Partners Total Opps -spm' report to produce the results needed to feed the dashboard.</description>
    <label>Top10PartnersOppsTotal</label>
    <nameField>
        <displayFormat>P{0000}</displayFormat>
        <label>Partner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Top10PartnersOppsTotals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>